--- a/002.html
+++ b/002.html
@@ -23,13 +23,13 @@
 兩者並稱為「日本刀の東西の両横綱」。
 「童子切」現收藏於東京國立博物館。</h3>
         </hr>
-    <p align="center"><img src="media/01.jpg" width="894" height="309" ></p>
+    <p align="center"><img src="media/1.jpg" width="894" height="309" ></p>
 
         <hr>
         <p align="center"><a href="index.html">刀劍</a></p>
         </hr>
 
-        <audio src="media/刀剣乱舞BGM　本丸.mp3" autoplay loop></audio>
+        <audio src="media/本丸.MP3" autoplay loop></audio>
     
     </body>
 </html>
