--- a/003.html
+++ b/003.html
@@ -33,12 +33,12 @@
 江戶幕府滅亡之後，「鬼丸」於明治14年（1881年）被本阿彌家的後人獻給明治天皇。
 「鬼丸」現收藏於日本宮內廳。</h3>
         </hr>
-    <p align="center"><img src="media/02.jpg" width="599" height="152" ></p>
+    <p align="center"><img src="media/2.jpg" width="599" height="152" ></p>
 
         <hr>
         <p align="center"><a href="index.html">刀劍</a></p>
         </hr>
         
-    <audio src="media/刀剣乱舞BGM　本丸.mp3" autoplay loop></audio>
+    <audio src="media/本丸.MP3" autoplay loop></audio>
     </body>
 </html>
