--- a/004.html
+++ b/004.html
@@ -19,12 +19,12 @@
 二戰之後「三日月」被德川家轉讓給一名刀劍收藏家，1992年又捐贈給東京國立博物館。
 「三日月」現收藏於東京國立博物館。</h3>
         </hr>
-    <p align="center"><img src="media/03.jpg" width="500" height="333" ></p>
+    <p align="center"><img src="media/3.jpg" width="500" height="333" ></p>
 
         <hr>
         <p align="center"><a href="index.html">刀劍</a></p>
         </hr>
         
-         <audio src="media/刀剣乱舞BGM　本丸.mp3" autoplay loop></audio>
+         <audio src="media/本丸.MP3" autoplay loop></audio>
     </body>
 </html>
