--- a/005.html
+++ b/005.html
@@ -15,11 +15,11 @@
 其子秀忠又轉讓給前田利家），之後便成為前田家最重要的家傳寶物。
 「大典太」現收藏於專門保存、管理前田家文化財產的「前田育德會」。</h3>
         </hr>
-    <p align="center"><img src="media/04.jpg" width="500" height="333" ></p>
+    <p align="center"><img src="media/4.jpg" width="500" height="333" ></p>
 
         <hr>
         <p align="center"><a href="index.html">刀劍</a></p>
         </hr>
-                  <audio src="media/刀剣乱舞BGM　本丸.mp3" autoplay loop></audio>
+                  <audio src="media/本丸.MP3" autoplay loop></audio>
     </body>
 </html>
