--- a/006.html
+++ b/006.html
@@ -18,12 +18,12 @@
 後與久遠寺的歸返交涉延宕多年，遂寄奉於杉原祥造所居住地尼崎市附近的本興寺。
 「數珠丸」現收藏於尼崎市本興寺。</h3>
         </hr>
-    <p align="center"><img src="media/05.jpg" width="640" height="410" ></p>
+    <p align="center"><img src="media/5.jpg" width="640" height="410" ></p>
 
         <hr>
         <p align="center"><a href="index.html">刀劍</a></p>
         </hr>
         
-        <audio src="media/刀剣乱舞BGM　本丸.mp3" autoplay loop></audio>
+        <audio src="media/本丸.MP3" autoplay loop></audio>
     </body>
 </html>
